[gd_scene load_steps=4 format=3 uid="uid://c2brk7x4hjnn8"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_5m6jj"]
[ext_resource type="Texture2D" uid="uid://d2umhehanskw6" path="res://Sprites/ZombieStand.png" id="2_sf2l0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yvpqj"]
size = Vector2(8, 10)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_5m6jj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1.90735e-06, 0)
scale = Vector2(10, 10)
texture = ExtResource("2_sf2l0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(10, 10)
shape = SubResource("RectangleShape2D_yvpqj")

[node name="FlashColorTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="FlashColorTimer" to="." method="_on_flash_color_timer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
